# trim

./: .dockerignore  .env  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  dist.sh  docker-compose.yml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  format_support.yml
.github/workflows/: ci.yml  release.yml
docs/: configuration-manual.md  development-manual.md  installation-manual.md  spec.md  user-manual-en.md  user-manual-es.md  user-manual-fr.md  user-manual-it.md  user-manual-pt.md  user-manual-ua.md
docs/backlog/: TASK-014-wasm-dotnet-compaction-java.md
docs/specks/: SDD-004-musl-execveat-fix.md  SDD-005-xstrip-docker.md  SDD-006-physical-minification.md  SDD-007-static-multiarch.md  SDD-008-stream-cli.md  SDD-009-cicd-versioning.md  SDD-010-multi-arch-multi-format.md  SDD-011-dead-branch-detection.md  SDD-012-multi-arch-expansion.md  SDD-013-aggressive-dead-code.md  SDD-014-wasm-dotnet-compaction-java.md  SDD-015-dead-branch-compaction.md
src/: constants.rs  lib.rs  main.rs  types.rs
src/analysis/: cfg.rs  dominance.rs  lattice.rs  mod.rs  noreturn.rs  reachability.rs  regstate.rs  roots.rs  sccp.rs  ssa.rs
src/arch/: aarch64.rs  aarch64_patch.rs  arm32.rs  arm32_patch.rs  (+11 more)
tests/: arm-hello.c  big-dead.c  combined-dead.c  dead-branch.c  gen_dotnet.py  gen_java.py  hello.c  lib.c  loongarch-hello.c  mips-hello.c  riscv-hello.c  s390x-hello.c  tail-dead.c  test.sh  x86-32-hello.c
(+41 files in other folders)
